--- a/SocialMedia/Areas/Admin/Views/Users/Delete.cshtml
+++ b/SocialMedia/Areas/Admin/Views/Users/Delete.cshtml
@@ -3,11 +3,11 @@
     ViewData["Title"] = "Delete User";
 }
 
-<h2 class="text-shadow">@ViewData["Title"] @Model.Username</h2>
+<h2 class="text-main">@ViewData["Title"] @Model.Username</h2>
 
 
 <div class="row">
-    <div class="col-md-4 form-color text-shadow">
+    <div class="col-md-4 form-color text-main">
         <form method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
