--- a/SocialMedia/Views/Manage/ChangeProfilePicture.cshtml
+++ b/SocialMedia/Views/Manage/ChangeProfilePicture.cshtml
@@ -3,12 +3,12 @@
     ViewData["Title"] = "Change Profile Picture";
     ViewData.AddActivePage(ManageNavPages.Index);
 }
-<a class="glyphicon glyphicon-arrow-left text-shadow back" href="back" onClick="history.go(-1); return false;">Back</a>
+<a class="glyphicon glyphicon-arrow-left text-main back" href="back" onClick="history.go(-1); return false;">Back</a>
 
-<h4 class="text-shadow">@ViewData["Title"]</h4>
+<h4 class="text-main">@ViewData["Title"]</h4>
 
 <div class="row">
-    <div class="col-md-6 text-shadow form-color text-shadow">
+    <div class="col-md-6 text-main form-color text-main">
         <form method="post" enctype="multipart/form-data">
             <br />
             <div class="form-group">
