--- a/SocialMedia/Areas/Admin/Views/Users/Edit.cshtml
+++ b/SocialMedia/Areas/Admin/Views/Users/Edit.cshtml
@@ -3,30 +3,30 @@
     ViewData["Title"] = "Edit User";
 }
 
-<h2 class="text-shadow">@ViewData["Title"] @Model.Username</h2>
+<h2 class="text-main">@ViewData["Title"] @Model.Username</h2>
 
 
 <div class="row">
-    <div class="col-md-4 form-color text-shadow">
+    <div class="col-md-4 form-color text-main">
         <form method="post">
             <div class="form-group">
                 <label asp-for="Username"></label>
-                <input asp-for="@Model.Username" class="form-control my-input text-shadow" disabled />
+                <input asp-for="@Model.Username" class="form-control my-input text-main" disabled />
                 <span asp-validation-for="Username" class="form-text text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name"></label>
-                <input asp-for="@Model.Name" class="form-control my-input text-shadow" />
+                <input asp-for="@Model.Name" class="form-control my-input text-main" />
                 <span asp-validation-for="Name" class="form-text text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Email"></label>
-                <input asp-for="@Model.Email" class="form-control my-input text-shadow" />
+                <input asp-for="@Model.Email" class="form-control my-input text-main" />
                 <span asp-validation-for="Email" class="form-text text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="BirthDate"></label>
-                <input asp-for="@Model.BirthDate" type="date" min="1940-01-01" max="2013-01-01" class="form-control my-input text-shadow" />
+                <input asp-for="@Model.BirthDate" type="date" min="1940-01-01" max="2013-01-01" class="form-control my-input text-main" />
                 <span asp-validation-for="BirthDate" class="form-text text-danger"></span>
             </div>
             <input type="hidden" value="@Model.Id" />
