--- a/SocialMedia/Views/Albums/Album.cshtml
+++ b/SocialMedia/Views/Albums/Album.cshtml
@@ -4,7 +4,7 @@
     var num = 1;
 }
 <link href="~/css/albums.css" rel="stylesheet" />
-<a class="glyphicon glyphicon-arrow-left text-shadow back" href="back" onClick="history.go(-1); return false;">Back</a>
+<a class="glyphicon glyphicon-arrow-left text-main back" href="back" onClick="history.go(-1); return false;">Back</a>
 
 <br />
 <div class="container form-color">
