--- a/SocialMedia/Views/Followers/Index.cshtml
+++ b/SocialMedia/Views/Followers/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Followers>
 
-<a class="glyphicon glyphicon-arrow-left text-shadow back" href="back" onClick="history.go(-1); return false;">Back</a>
+<a class="glyphicon glyphicon-arrow-left text-main back" href="back" onClick="history.go(-1); return false;">Back</a>
 
 <div class="container form-color message-container">
     <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11">
@@ -16,8 +16,8 @@
                     {
                         <span><img src="@user.UserProfileImage" class="message-avatar" /></span>
                     }
-                    <span class="user-name text-shadow">@user.Name</span>
-                    <span class="username text-shadow">@user.Username</span>
+                    <span class="user-name text-main">@user.Name</span>
+                    <span class="username text-main">@user.Username</span>
                 </a>
             </div>
             <br />
