--- a/SocialMedia/Views/Messages/Message.cshtml
+++ b/SocialMedia/Views/Messages/Message.cshtml
@@ -6,7 +6,7 @@
     $("#container")[0].scrollIntoView();
 </script>
 
-<a class="glyphicon glyphicon-arrow-left text-shadow back" href="back" onClick="history.go(-1); return false;">Back</a>
+<a class="glyphicon glyphicon-arrow-left text-main back" href="back" onClick="history.go(-1); return false;">Back</a>
 
 <br />
 <div class="container form-color message-container" id="container">
@@ -36,13 +36,13 @@
                         <span><img src="@Model.RecipientProfileImage" class="message-picture" /></span>
                     }
                 }
-                <span class="text-shadow mess-date">• @message.Date</span>
-                <div class="mess-content text-shadow">@message.Content</div>
+                <span class="text-main mess-date">• @message.Date</span>
+                <div class="mess-content text-main">@message.Content</div>
             </div>
             <br />
         }
         <form method="post" asp-action="Answer" asp-route-RecepientId="@Model.RecipientId">
-            <textarea rows="1" class="comment-textarea form-control my-input text-shadow" placeholder="Send your message...." name="Content"></textarea>
+            <textarea rows="1" class="comment-textarea form-control my-input text-main" placeholder="Send your message...." name="Content"></textarea>
             <br />
             <div>
                 <input class="btn btn-success center-block btn-lg" type="submit" value="Send" />
