--- a/SocialMedia/Views/Pictures/Delete.cshtml
+++ b/SocialMedia/Views/Pictures/Delete.cshtml
@@ -2,26 +2,26 @@
 @{
     ViewData["Title"] = "Delete Picture";
 }
-<a class="glyphicon glyphicon-arrow-left text-shadow back" href="back" onClick="history.go(-1); return false;">Back</a>
+<a class="glyphicon glyphicon-arrow-left text-main back" href="back" onClick="history.go(-1); return false;">Back</a>
 
-<h2 class="text-shadow">@ViewData["Title"]</h2>
+<h2 class="text-main">@ViewData["Title"]</h2>
 
 <div class="row">
-    <div class="col-md-4 form-color text-shadow">
+    <div class="col-md-4 form-color text-main">
         <form method="post" asp-action="Destroy">
             <div class="form-group">
                 <label asp-for="Description"></label>
-                <input asp-for="Description" class="form-control my-input text-shadow" disabled />
+                <input asp-for="Description" class="form-control my-input text-main" disabled />
                 <span asp-validation-for="Description" class="form-text text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PublishDate"></label>
-                <input asp-for="PublishDate" class="form-control my-input text-shadow" type="date" disabled />
+                <input asp-for="PublishDate" class="form-control my-input text-main" type="date" disabled />
                 <span asp-validation-for="PublishDate" class="form-text text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AlbumName"></label>
-                <input asp-for="AlbumName" class="form-control my-input text-shadow" disabled />
+                <input asp-for="AlbumName" class="form-control my-input text-main" disabled />
                 <span asp-validation-for="AlbumName" class="form-text text-danger"></span>
             </div>
             <div>
