--- a/SocialMedia/Views/Pictures/Edit.cshtml
+++ b/SocialMedia/Views/Pictures/Edit.cshtml
@@ -2,15 +2,15 @@
 @{
     ViewData["Title"] = "Edit Picture";
 }
-<a class="glyphicon glyphicon-arrow-left text-shadow back" href="back" onClick="history.go(-1); return false;">Back</a>
-<h2 class="text-shadow">@ViewData["Title"]</h2>
+<a class="glyphicon glyphicon-arrow-left text-main back" href="back" onClick="history.go(-1); return false;">Back</a>
+<h2 class="text-main">@ViewData["Title"]</h2>
 
 <div class="row">
-    <div class="col-md-4 form-color text-shadow">
+    <div class="col-md-4 form-color text-main">
         <form method="post">
             <div class="form-group">
                 <label asp-for="Description"></label>
-                <input asp-for="Description" class="form-control my-input text-shadow" />
+                <input asp-for="Description" class="form-control my-input text-main" />
                 <span asp-validation-for="Description" class="form-text text-danger"></span>
             </div>
             <div>
