--- a/SocialMedia/Views/Shared/_Layout.cshtml
+++ b/SocialMedia/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MyWebSite</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SocialMedia</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -51,7 +51,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p class="text-shadow">&copy; 2017 - MyWebSite</p>
+            <p>&copy; 2018 - SocialMedia</p>
         </footer>
     </div>
 
