--- a/SocialMedia/wwwroot/css/site.css
+++ b/SocialMedia/wwwroot/css/site.css
@@ -3,7 +3,7 @@
     padding-bottom: 20px;
     position: relative;
     height: 100%;
-    background-image: url('../images/Wood-Background-3.jpg');
+    background-image: url('../images/concrete background.jpg');
     background-size: cover;
     overflow: auto;
     background-repeat: no-repeat;
@@ -41,13 +41,28 @@
     }
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    color: black;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+th {
+    color: black;
+}
+
+hr {
+    border-top: 2px solid black;
+}
+
 .navbar {
     background: rgba(34, 34, 34, 0.9)
 }
 
-.text-shadow {
-    color: #d8d8d8;
-    text-shadow: 0 0 1px rgba(0, 0, 0,.99), 0 0 2px rgba(0, 0, 0,.89), 0 0 3px rgba(0, 0, 0,.79), 0 0 4px rgba(0, 0, 0,.69), 0 0 5px rgba(0, 0, 0,.49) /*, 0 0 80px #0ff, 0 0 90px #0ff, 0 0 100px #0ff, 0 0 150px #0ff*/;
+.text-main {
+    color: #000000;
     text-decoration: none !important;
 }
 
@@ -57,7 +72,7 @@
 
 .form-color {
     background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0.6) 100%);
-    background: linear-gradient(to bottom, rgb(113, 110, 110, 0.8) 0%, rgba(0, 0, 0, 0.6) 100%);
+    background: linear-gradient(to bottom, rgb(113, 110, 110, 0.8) 0%, rgba(58, 57, 57, 0.6) 100%);
     -webkit-transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
     transition: opacity 0.1s, -webkit-transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
     transition: opacity 0.1s, transform 0.3s cubic-bezier(0.17, -0.65, 0.665, 1.25);
@@ -66,6 +81,10 @@
     transform: scale(1);
     color: #ffffff;
     border-radius: 8px;
+}
+
+.form-control {
+    border: 1px solid #343434;
 }
 
 .on-one-row {
@@ -143,6 +162,7 @@
     padding-top: 20px;
     padding-left: 5px;
     font-size: 13px;
+    color: black;
 }
 
 .edit-delete {
@@ -343,4 +363,27 @@ a:active {
     font-size: 100px;
     margin: auto;
     color: rgb(35, 35, 35);
+}
+
+.my-btns {
+    background-color: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.27);
+    color: black;
+    font-size: 16px;
+    border-radius: 5px;
+    padding: 5px 10px 5px 10px;
+    margin-top: 5px;
+    font-weight:bold;
+}
+
+    .my-btns:hover {
+        -webkit-box-shadow: 0px 0px 15px 5px rgba(0, 121, 204, .75);
+        -moz-box-shadow: 0px 0px 15px 5px rgba(0, 121, 204, .75);
+        box-shadow: 0px 0px 15px 5px rgba(0, 121, 204, .75);
+        background-color: transparent;
+        color: black;
+    }
+
+::placeholder {
+    color: black;
 }
