--- a/SocialMedia/Views/Messages/Send.cshtml
+++ b/SocialMedia/Views/Messages/Send.cshtml
@@ -15,7 +15,7 @@
             <textarea rows="16" class="comment-textarea form-control my-input text-main" placeholder="Send your message...." name="Content"></textarea>
             <br />
             <div>
-                <input class="btn btn-success center-block btn-lg" type="submit" value="Send" />
+                <input class="btn my-btns center-block btn-lg" type="submit" value="Send" />
             </div>
             <br />
         </form>
