--- a/SocialMedia/Areas/Admin/Views/Users/Delete.cshtml
+++ b/SocialMedia/Areas/Admin/Views/Users/Delete.cshtml
@@ -10,23 +10,23 @@
     <div class="col-md-4 form-color text-main">
         <form method="post">
             <div class="form-group">
-                <label asp-for="Name"></label>
+                <label class="text-main" asp-for="Name"></label>
                 <input asp-for="@Model.Name" class="form-control" disabled />
                 <span asp-validation-for="Name" class="form-text text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Username"></label>
+                <label class="text-main" asp-for="Username"></label>
                 <input asp-for="@Model.Username" class="form-control" disabled />
                 <span asp-validation-for="Username" class="form-text text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email"></label>
+                <label class="text-main" asp-for="Email"></label>
                 <input asp-for="@Model.Email" class="form-control" disabled />
                 <span asp-validation-for="Email" class="form-text text-danger"></span>
             </div>
             <input type="hidden" value="@Model.Id" />
             <div>
-                <input class="btn btn-danger" type="submit" value="Delete User" />
+                <input class="btn my-btns" type="submit" value="Delete User" />
             </div>
             <br />
         </form>
