--- a/SocialMedia/Views/Albums/Create.cshtml
+++ b/SocialMedia/Views/Albums/Create.cshtml
@@ -10,12 +10,12 @@
     <div class="col-md-4 form-color text-main">
         <form method="post">
             <div class="form-group">
-                <label asp-for="Title"></label>
+                <label class="text-main" asp-for="Title"></label>
                 <input asp-for="Title" class="form-control my-input text-main" />
                 <span asp-validation-for="Title" class="form-text text-danger"></span>
             </div>
             <div>
-                <input class="btn btn-success" type="submit" value="Create Album" />
+                <input class="btn my-btns" type="submit" value="Create Album" />
             </div>
             <br />
         </form>
