--- a/SocialMedia/Views/Albums/Edit.cshtml
+++ b/SocialMedia/Views/Albums/Edit.cshtml
@@ -10,13 +10,13 @@
     <div class="col-md-4 form-color text-main">
         <form method="post">
             <div class="form-group">
-                <label asp-for="Title"></label>
+                <label class="text-main" asp-for="Title"></label>
                 <input asp-for="Title" class="form-control my-input text-main" />
                 <span asp-validation-for="Title" class="form-text text-danger"></span>
             </div>
             <input asp-for="Id" hidden />
             <div>
-                <input class="btn btn-success" type="submit" value="Edit Album" />
+                <input class="btn my-btns" type="submit" value="Edit Album" />
             </div>
             <br />
         </form>
