--- a/SocialMedia/Views/Manage/AccountSettings.cshtml
+++ b/SocialMedia/Views/Manage/AccountSettings.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AccountSettingsViewModel
 @{
     ViewData["Title"] = "Account Setting";
-    ViewData.AddActivePage(ManageNavPages.Index);
+    ViewData.AddActivePage(ManageNavPages.AccountSettings);
 }
 <a class="glyphicon glyphicon-arrow-left text-main back" href="back" onClick="history.go(-1); return false;">Back</a>
 
@@ -9,42 +9,37 @@
 
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
-    <div class="col-md-9 form-color">
-        <div class="col-md-3">
-            @await Html.PartialAsync("_ManageNav")
-        </div>
-        <div class="col-md-6  text-main">
-            <form method="post">
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Username"></label>
-                    <input asp-for="Username" class="form-control my-input text-main" disabled />
-                </div>
-                <div class="form-group">
-                    <label asp-for="Email"></label>
-                    @if (Model.IsEmailConfirmed)
-                    {
-                        <div class="input-group">
-                            <input asp-for="Email" class="form-control my-input text-main" />
-                            <span class="input-group-addon" aria-hidden="true"><span class="glyphicon glyphicon-ok text-success"></span></span>
-                        </div>
-                    }
-                    else
-                    {
+    <div class="col-md-6 text-main form-color text-main">
+        <form method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label class="text-main" asp-for="Username"></label>
+                <input asp-for="Username" class="form-control my-input text-main" disabled />
+            </div>
+            <div class="form-group">
+                <label class="text-main" asp-for="Email"></label>
+                @if (Model.IsEmailConfirmed)
+                {
+                    <div class="input-group">
                         <input asp-for="Email" class="form-control my-input text-main" />
-                        @*<button asp-action="SendVerificationEmail" class="btn btn-link">Send verification email</button>*@
-                    }
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Name"></label>
-                    <input asp-for="Name" class="form-control my-input text-main" name="Name" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                </div>
-                <button type="submit" class="btn btn-default">Save</button>
-            </form>
-            <br />
-        </div>
+                        <span class="input-group-addon" aria-hidden="true"><span class="glyphicon glyphicon-ok text-success"></span></span>
+                    </div>
+                }
+                else
+                {
+                    <input asp-for="Email" class="form-control my-input text-main" />
+                    @*<button asp-action="SendVerificationEmail" class="btn btn-link">Send verification email</button>*@
+                }
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label class="text-main" asp-for="Name"></label>
+                <input asp-for="Name" class="form-control my-input text-main" name="Name" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn my-btns">Save</button>
+        </form>
+        <br />
     </div>
 </div>
 
