--- a/SocialMedia/Views/Manage/ChangePassword.cshtml
+++ b/SocialMedia/Views/Manage/ChangePassword.cshtml
@@ -4,28 +4,28 @@
     ViewData.AddActivePage(ManageNavPages.ChangePassword);
 }
 
-<h4>@ViewData["Title"]</h4>
+<h4 class="text-main">@ViewData["Title"]</h4>
 @Html.Partial("_StatusMessage", Model.StatusMessage)
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 text-main form-color text-main">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="OldPassword"></label>
-                <input asp-for="OldPassword" class="form-control" />
+                <label class="text-main" asp-for="OldPassword"></label>
+                <input asp-for="OldPassword" class="form-control my-input" />
                 <span asp-validation-for="OldPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NewPassword"></label>
-                <input asp-for="NewPassword" class="form-control" />
+                <label class="text-main" asp-for="NewPassword"></label>
+                <input asp-for="NewPassword" class="form-control my-input" />
                 <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
+                <label class="text-main" asp-for="ConfirmPassword"></label>
+                <input asp-for="ConfirmPassword" class="form-control my-input" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Update password</button>
+            <button type="submit" class="btn my-btns">Update password</button>
         </form>
     </div>
 </div>
