--- a/SocialMedia/Views/Manage/ChangeProfilePicture.cshtml
+++ b/SocialMedia/Views/Manage/ChangeProfilePicture.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ChangePicture
 @{
     ViewData["Title"] = "Change Profile Picture";
-    ViewData.AddActivePage(ManageNavPages.Index);
+    ViewData.AddActivePage(ManageNavPages.ChangeProfilePicture);
 }
 <a class="glyphicon glyphicon-arrow-left text-main back" href="back" onClick="history.go(-1); return false;">Back</a>
 
@@ -13,9 +13,9 @@
             <br />
             <div class="form-group">
                 <input type="file" name="ProfilePicture" style="display: none" />
-                <button type="button" class="btn btn-default" onclick="document.getElementsByName('ProfilePicture')[0].click()">Choose picture!</button>
+                <button type="button" class="btn my-btns" onclick="document.getElementsByName('ProfilePicture')[0].click()">Choose picture!</button>
             </div>
-            <button type="submit" class="btn btn-default">Save</button>
+            <button type="submit" class="btn my-btns">Save</button>
         </form>
         <br />
     </div>
