--- a/SocialMedia/Views/Manage/_ManageNav.cshtml
+++ b/SocialMedia/Views/Manage/_ManageNav.cshtml
@@ -5,12 +5,9 @@
 }
 
 <ul class="nav nav-pills nav-stacked">
-    <li class="@ManageNavPages.IndexNavClass(ViewContext)"><a asp-action="Index">Profile</a></li>
-    <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a asp-action="ChangePassword">Password</a></li>
-    @if (hasExternalLogins)
-    {
-        <li class="@ManageNavPages.ExternalLoginsNavClass(ViewContext)"><a asp-action="ExternalLogins">External logins</a></li>
-    }
-    <li class="@ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)"><a asp-action="TwoFactorAuthentication">Two-factor authentication</a></li>
+    <li class="@ManageNavPages.IndexNavClass(ViewContext)"><a class="text-main" asp-action="Index">Profile</a></li>
+    <li class="@ManageNavPages.ChangePasswordNavClass(ViewContext)"><a class="text-main" asp-action="ChangePassword">Password</a></li>
+    <li class="@ManageNavPages.ChangeProfilePictureClass(ViewContext)"><a class="text-main" asp-action="ChangeProfilePicture">Profile Picture</a></li>
+    <li class="@ManageNavPages.AccountSettingsClass(ViewContext)"><a class="text-main" asp-action="AccountSettings">Account Settings</a></li>
 </ul>
 
