--- a/SocialMedia/Views/Messages/Index.cshtml
+++ b/SocialMedia/Views/Messages/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <br />
 <a class="glyphicon glyphicon-arrow-left text-main back" href="back" onClick="history.go(-1); return false;">Back</a>
-<a asp-area="" asp-controller="Messages" asp-action="Send" class="text-main btn btn-success">Send Message</a>
+<a asp-area="" asp-controller="Messages" asp-action="Send" class="text-main btn my-btns">Send Message</a>
 
 <br />
 <div class="container form-color message-container">
