--- a/SocialMedia/Views/Search/Pictures.cshtml
+++ b/SocialMedia/Views/Search/Pictures.cshtml
@@ -14,7 +14,7 @@
 <form asp-controller="Search" asp-action="Pictures" method="get">
     <input class="form-control my-input text-main form-color" type="text" name="SearchString" placeholder="Search picture by description" style="width: 250px;float: left">
     <div style="overflow: hidden; padding-right: .5em;">
-        <button type="submit" class="btn btn-default">Search</button>
+        <button type="submit" class="btn my-btns search-button">Search</button>
     </div>
 </form>
 <br />
