--- a/SocialMedia/Views/Search/Users.cshtml
+++ b/SocialMedia/Views/Search/Users.cshtml
@@ -14,7 +14,7 @@
 <form asp-controller="Search" asp-action="Users" method="get">
     <input class="form-control my-input text-main form-color" type="text" name="SearchString" placeholder="Search user by name/username" style="width: 250px;float: left">
     <div style="overflow: hidden; padding-right: .5em;">
-        <button type="submit" class="btn btn-default">Search</button>
+        <button type="submit" class="btn my-btns search-button">Search</button>
     </div>
 </form>
 <br />
